# QuadMath

./: .coverage  .cursorrules  .gitignore  ARCHITECTURE.md  README.md  WORKFLOW.md  pyproject.toml
quadmath/latex/: 00_front_matter.tex  01_introduction.tex  02_4d_namespaces.tex  03_quadray_methods.tex  04_optimization_in_4d.tex  06_discussion.tex  08_equations_appendix.tex  09_free_energy_active_inference.tex  10_symbols_glossary.tex  preamble.tex  quadmath_review.tex
quadmath/markdown/: 00_front_matter.md  01_introduction.md  02_4d_namespaces.md  03_quadray_methods.md  04_optimization_in_4d.md  05_extensions.md  06_discussion.md  07_resources.md  08_equations_appendix.md  09_free_energy_active_inference.md  10_symbols_glossary.md
quadmath/output/: 00_front_matter.aux  01_introduction.aux  02_4d_namespaces.aux  03_quadray_methods.aux  07_resources.aux  (+20 more)
src/: cayley_menger.py  conversions.py  discrete_variational.py  examples.py  geometry.py  glossary_gen.py  information.py  linalg_utils.py  metrics.py  nelder_mead_quadray.py  paths.py  quadray.py  symbolic.py  visualize.py
tests/: test_active_inference.py  test_cayley_menger.py  test_conversions.py  test_discrete_variational.py  test_examples.py  test_examples_cov.py  test_geometry.py  test_glossary_gen.py  test_information.py  test_information_cov.py  test_linalg_utils.py  test_metrics.py  test_metrics_cov.py  test_nelder_mead_visual.py  test_paths.py  test_paths_cov.py  test_quadray.py  test_quadray_cov.py  test_symbolic.py  test_symbolic_cov.py  test_sympy_formalisms.py  test_visualize.py  test_visualize_cov.py
(+74 files in other folders)
